y.output

state 0
	$accept: .plexMatch $end 

	TitleHint  shift 12
	ShowHint  shift 13
	SeasonHint  shift 18
	YearHint  shift 17
	TMDBHint  shift 14
	TVDBHint  shift 15
	IMDBHint  shift 16
	EpisodeHint  shift 20
	.  error

	plexMatch  goto 1
	hints  goto 2
	hint  goto 3
	title  goto 4
	show  goto 5
	tmdbID  goto 6
	tvdbID  goto 7
	imdbID  goto 8
	year  goto 9
	season  goto 10
	episode  goto 19
	episodes  goto 11

state 1
	$accept:  plexMatch.$end 

	$end  accept
	.  error


state 2
	plexMatch:  hints.    (1)
	hints:  hints.hint 

	TitleHint  shift 12
	ShowHint  shift 13
	SeasonHint  shift 18
	YearHint  shift 17
	TMDBHint  shift 14
	TVDBHint  shift 15
	IMDBHint  shift 16
	EpisodeHint  shift 20
	.  reduce 1 (src line 64)

	hint  goto 21
	title  goto 4
	show  goto 5
	tmdbID  goto 6
	tvdbID  goto 7
	imdbID  goto 8
	year  goto 9
	season  goto 10
	episode  goto 19
	episodes  goto 11

state 3
	hints:  hint.    (3)

	.  reduce 3 (src line 74)


state 4
	hint:  title.    (4)

	.  reduce 4 (src line 79)


state 5
	hint:  show.    (5)

	.  reduce 5 (src line 83)


state 6
	hint:  tmdbID.    (6)

	.  reduce 6 (src line 87)


state 7
	hint:  tvdbID.    (7)

	.  reduce 7 (src line 91)


state 8
	hint:  imdbID.    (8)

	.  reduce 8 (src line 95)


state 9
	hint:  year.    (9)

	.  reduce 9 (src line 99)


state 10
	hint:  season.    (10)

	.  reduce 10 (src line 103)


11: shift/reduce conflict (shift 20(0), red'n 11(0)) on EpisodeHint
state 11
	hint:  episodes.    (11)
	episodes:  episodes.episode 

	EpisodeHint  shift 20
	.  reduce 11 (src line 107)

	episode  goto 22

state 12
	title:  TitleHint.':' Str 

	':'  shift 23
	.  error


state 13
	show:  ShowHint.':' Str 

	':'  shift 24
	.  error


state 14
	tmdbID:  TMDBHint.':' Int 

	':'  shift 25
	.  error


state 15
	tvdbID:  TVDBHint.':' Int 

	':'  shift 26
	.  error


state 16
	imdbID:  IMDBHint.':' Int 
	imdbID:  IMDBHint.':' 't' 't' Int 

	':'  shift 27
	.  error


state 17
	year:  YearHint.':' Int 

	':'  shift 28
	.  error


state 18
	season:  SeasonHint.':' Int 

	':'  shift 29
	.  error


state 19
	episodes:  episode.    (21)

	.  reduce 21 (src line 155)


state 20
	episode:  EpisodeHint.':' Int ':' Str 
	episode:  EpisodeHint.':' Special Int ':' Str 

	':'  shift 30
	.  error


state 21
	hints:  hints hint.    (2)

	.  reduce 2 (src line 70)


state 22
	episodes:  episodes episode.    (20)

	.  reduce 20 (src line 151)


state 23
	title:  TitleHint ':'.Str 

	Str  shift 31
	.  error


state 24
	show:  ShowHint ':'.Str 

	Str  shift 32
	.  error


state 25
	tmdbID:  TMDBHint ':'.Int 

	Int  shift 33
	.  error


state 26
	tvdbID:  TVDBHint ':'.Int 

	Int  shift 34
	.  error


state 27
	imdbID:  IMDBHint ':'.Int 
	imdbID:  IMDBHint ':'.'t' 't' Int 

	Int  shift 35
	't'  shift 36
	.  error


state 28
	year:  YearHint ':'.Int 

	Int  shift 37
	.  error


state 29
	season:  SeasonHint ':'.Int 

	Int  shift 38
	.  error


state 30
	episode:  EpisodeHint ':'.Int ':' Str 
	episode:  EpisodeHint ':'.Special Int ':' Str 

	Special  shift 40
	Int  shift 39
	.  error


state 31
	title:  TitleHint ':' Str.    (12)

	.  reduce 12 (src line 112)


state 32
	show:  ShowHint ':' Str.    (13)

	.  reduce 13 (src line 117)


state 33
	tmdbID:  TMDBHint ':' Int.    (14)

	.  reduce 14 (src line 122)


state 34
	tvdbID:  TVDBHint ':' Int.    (15)

	.  reduce 15 (src line 127)


state 35
	imdbID:  IMDBHint ':' Int.    (16)

	.  reduce 16 (src line 132)


state 36
	imdbID:  IMDBHint ':' 't'.'t' Int 

	't'  shift 41
	.  error


state 37
	year:  YearHint ':' Int.    (18)

	.  reduce 18 (src line 141)


state 38
	season:  SeasonHint ':' Int.    (19)

	.  reduce 19 (src line 146)


state 39
	episode:  EpisodeHint ':' Int.':' Str 

	':'  shift 42
	.  error


state 40
	episode:  EpisodeHint ':' Special.Int ':' Str 

	Int  shift 43
	.  error


state 41
	imdbID:  IMDBHint ':' 't' 't'.Int 

	Int  shift 44
	.  error


state 42
	episode:  EpisodeHint ':' Int ':'.Str 

	Str  shift 45
	.  error


state 43
	episode:  EpisodeHint ':' Special Int.':' Str 

	':'  shift 46
	.  error


state 44
	imdbID:  IMDBHint ':' 't' 't' Int.    (17)

	.  reduce 17 (src line 136)


state 45
	episode:  EpisodeHint ':' Int ':' Str.    (22)

	.  reduce 22 (src line 160)


state 46
	episode:  EpisodeHint ':' Special Int ':'.Str 

	Str  shift 47
	.  error


state 47
	episode:  EpisodeHint ':' Special Int ':' Str.    (23)

	.  reduce 23 (src line 164)


18 terminals, 13 nonterminals
24 grammar rules, 48/16000 states
1 shift/reduce, 0 reduce/reduce conflicts reported
62 working sets used
memory: parser 22/240000
0 extra closures
42 shift entries, 1 exceptions
14 goto entries
9 entries saved by goto default
Optimizer space used: output 48/240000
48 table entries, 0 zero
maximum spread: 18, maximum offset: 18
